Correct styling errors

--- a/views/add_module.ejs
+++ b/views/add_module.ejs
@@ -75,10 +75,8 @@
       </div>
     </form>
     <script>
-      document.getElementById('username').value = 
-          sessionStorage.getItem('username');
-      document.getElementById('role').value = 
-          sessionStorage.getItem('role');
+      document.getElementById('username').value = sessionStorage.getItem('username');
+      document.getElementById('role').value = sessionStorage.getItem('role');
     </script>
     <script>
       (function() {
