--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -17,9 +17,9 @@
   <body>
     <h1><%= title %></h1>
     <table class="table">
-			<thead>
-				<tr>
-					<th scope="col">Module Code</th>
+      <thead>
+        <tr>
+          <th scope="col">Module Code</th>
           <th scope="col">Module Name</th>
           <th scope="col">Prerequisites</th>
           <th scope="col">Registration Start Date</th>
@@ -28,9 +28,9 @@
           <th scope="col">Rank</th>
           <th scope="col">Status</th>
           <th scope="col">Delete</th>
-				</tr>
-			</thead>
-			<tbody>
+        </tr>
+      </thead>
+      <tbody>
         <tr>
           <td>CS2102</td>
           <td>Database Systems</td>
@@ -49,23 +49,22 @@
             <button type="submit" class="btn" id="btn_del_mod" name="btn_del_mod">Delete</button>
           </td>
         </tr>
-				<% for(var i=0; i<data.length; i++) { %>
-				<tr>
-					<td><%= data[i].mod_code%></td>
-					<td><%= data[i].mod_name%></td>
+        <tr>
+          <% for(var i=0; i<data.length; i++) { %>
+          <td><%= data[i].mod_code%></td>
+          <td><%= data[i].mod_name%></td>
           <td><%= data[i].prereq%></td>
           <td><%= data[i].s_reg%></td>
           <td><%= data[i].e_reg%></td>
           <td><%= data[i].quota%></td>
-				</tr>
-				<% } %>
-			</tbody>
+          <% } %>
+        </tr>
+      </tbody>
     </table>
     <div>
       <button type="submit" class="btn btn-block" id="btn_reg_mod" name="btn_reg_mod" onclick="window.location.href='register_module'">Register module</button>
     </div>
-    <!-- <script>
-
+    <script>
       (function() {
         window.addEventListener('load', function() {
           var forms = [document.getElementById('register_form')];
@@ -74,6 +73,6 @@
           })
         });
       })();
-    </script> -->
+    </script>
   </body>
 </html>
