--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -72,8 +72,8 @@
       </tbody>
     </table>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary" id="btn_reg_mod" name="btn_reg_mod"
-              onclick="window.location.href='register_module'">Register Module</button>
+      <button type="submit" class="btn btn-primary" id="btn-register" name="btn-register"
+              onclick="window.location.href='register_module'">Register</button>
     </div>
   </body>
 </html>
