--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,14 +49,8 @@
         <a class="d-block small mt-3" href="/register">Register an account</a>
       </div>
       <div>
-        <button type="submit" class="btn btn-primary btn-block" onclick="saveSession();">Submit</button>
+        <button type="submit" class="btn btn-primary btn-block">Submit</button>
       </div>
     </form>
-    <script>
-      function saveSession() {
-        sessionStorage.setItem("username", document.getElementById('username').value);
-        sessionStorage.setItem("role", document.getElementById('role').value);
-      }
-    </script>
   </body>
 </html>
