--- a/views/register_module.ejs
+++ b/views/register_module.ejs
@@ -80,6 +80,11 @@
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
       </div>
     </form>
+    <div class="form-group"></div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='dashboard_student'">Back to Home</button>
+    </div>
     <script>
       function onChangeRole() {
         if (document.getElementById('role').value === 'Student' || document.getElementById('role').value === '') {
