--- a/views/dashboard_admin.ejs
+++ b/views/dashboard_admin.ejs
@@ -93,5 +93,10 @@
       <button type="submit" class="btn btn-primary"
               onclick="window.location.href='round'">Round</button>
     </div>
+    <div class="form-group">
+      <form action="logout" role="form" method="post">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
+    </div>
   </body>
 </html>
