--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -75,5 +75,10 @@
       <button type="submit" class="btn btn-primary" id="btn-register" name="btn-register"
               onclick="window.location.href='register_module'">Register</button>
     </div>
+    <div class="form-group">
+      <form action="logout" role="form" method="post">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
+    </div>
   </body>
 </html>
