--- a/views/module.ejs
+++ b/views/module.ejs
@@ -107,10 +107,6 @@
       <% }); %>
       </tbody>
     </table>
-    <div class="form-group">
-      <button type="submit" class="btn btn-primary"
-              onclick="window.location.href='dashboard_admin'">Back to Home</button>
-    </div>
     <div id="div-lecture-slots">
       <table class="table" id="table-lectures">
         <tr>
@@ -135,6 +131,15 @@
           </tr>
         <% }); %>
       </table>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='dashboard_admin'">Back to Home</button>
+    </div>
+    <div class="form-group">
+      <form action="logout" role="form" method="post">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
     </div>
     <script>
       $("#table-modules").on('click','#btn-delete-module',function() {
