--- a/views/program.ejs
+++ b/views/program.ejs
@@ -73,6 +73,11 @@
       <button type="submit" class="btn btn-primary"
               onclick="window.location.href='dashboard_admin'">Back to Home</button>
     </div>
+    <div class="form-group">
+      <form action="logout" role="form" method="post">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
+    </div>
     <script>
       $("#table-programs").on('click','#btn-delete',function() {
         const currentRow = $(this).closest("tr"); // get the current row
