--- a/views/round.ejs
+++ b/views/round.ejs
@@ -81,6 +81,11 @@
       <button type="submit" class="btn btn-primary"
               onclick="window.location.href='dashboard_admin'">Back to Home</button>
     </div>
+    <div class="form-group">
+      <form action="logout" role="form" method="post">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
+    </div>
     <script>
       (function() {
         window.addEventListener('load', function() {
